--- a/src/main/resources/GridPanelLayout.css
+++ b/src/main/resources/GridPanelLayout.css
@@ -7,3 +7,13 @@
 .label{
     -fx-text-fill: #e8e8e8;
 }
+
+.button-tomato {
+    -fx-background-color:#FF6347;
+    -fx-text-fill: #FFFFFF;
+}
+
+.button-blue {
+    -fx-background-color: #87CEFA;
+    -fx-text-fill: #FFFFFF;
+}
