--- a/src/main/resources/Layout.css
+++ b/src/main/resources/Layout.css
@@ -1,11 +1,9 @@
 .root{
-
--fx-background-color: #383838;
     -fx-font-size: 11pt;
 }
 
-.label{
-    -fx-text-fill: #e8e8e8;
+.button-play{
+    -fx-text-fill: #AC5223;
 }
 
 .button-tomato {
